icon size tweak for png & svg

--- a/assets/ezexped.css
+++ b/assets/ezexped.css
@@ -2,6 +2,10 @@
     max-width: none;
 }
 
-.ezexped-pop .tooltip-inner .slotitem-img {
+.ezexped-pop .tooltip-inner .slotitem-img.png {
     height: 1.6em;
+}
+
+.ezexped-pop .tooltip-inner .slotitem-img.svg {
+    height: 1.2em;
 }
