more aggressive space saving

--- a/assets/ezexped.css
+++ b/assets/ezexped.css
@@ -25,3 +25,7 @@
 #poi-plugin-ezexped .exped-viewer .slotitem-img.svg {
     height: 1.6em;
 }
+
+#poi-plugin-ezexped .exped-btn-table .panel-body {
+    padding: 8px;
+}
