expedition picker now floats

--- a/assets/ezexped.css
+++ b/assets/ezexped.css
@@ -33,3 +33,7 @@
 #plugin-ezexped-settings .checkbox > label {
     min-height: 0;
 }
+
+#poi-plugin-ezexped .collapsing {
+    transition: none;
+}
