limit scrolling to only req viewer

--- a/assets/ezexped.css
+++ b/assets/ezexped.css
@@ -37,3 +37,8 @@
 #poi-plugin-ezexped .collapsing {
     transition: none;
 }
+
+#poi-plugin-ezexped.poi-app-tabpane {
+    display: flex;
+    flex-direction: column;
+}
