--- a/assets/ezexped.css
+++ b/assets/ezexped.css
@@ -42,3 +42,8 @@
     display: flex;
     flex-direction: column;
 }
+
+#plugin-ezexped-settings .radio.kancepts > label {
+    display: flex;
+    align-items: center;
+}
