patch try-not-to-blow-something-up

--- a/assets/ezexped.css
+++ b/assets/ezexped.css
@@ -38,7 +38,11 @@
     transition: none;
 }
 
-#poi-plugin-ezexped.poi-app-tabpane,
+#poi-plugin-ezexped.poi-app-tabpane {
+    display: flex;
+    flex-direction: column;
+}
+
 #plugin-mountpoint > .poi-app-tabpane {
     display: flex;
     flex-direction: column;
